refactor: 코드 압축